--- a/.htaccess
+++ b/.htaccess
@@ -8,12 +8,9 @@ ErrorDocument 404 /errors/404.html
 ErrorDocument 500 /errors/500.html
 
 
-Options +FollowSymlinks
-RewriteEngine on
-RewriteCond % ^www.htaccess.local [NC]
-RewriteRule ^(.*)$ http://htacess.local/$1 [R=301,NC]
 
+#Rewrite WWW
 Options +FollowSymlinks
 RewriteEngine on
-RewriteCond % ^http://www.192.168.0.149 [NC]
-RewriteRule ^(.*)$ http://192.168.0.149/redirect.html [R=301,NC]
+RewriteCond % ^http://www.abm-info.github.io/Hostit/ [NC]
+RewriteRule ^(.*)$ http://abm-info.github.io/Hostit/ [R=301,NC]
